# caikit-nlp-client

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  caikit-tgis.yml  docker-compose.yml  grpc_test.py  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
caikit_grpc_client/: predict.py  prediction_service.py
caikit_nlp_client/: __init__.py  client.py  client_utils.py  grpc_channel.py  grpc_client.py  grpc_client2.py  grpc_client_introspection.py
caikit_nlp_client/grpc_client/: grpc_client.py  grpcclient_builder.py
caikit_nlp_client/http_client/: http_client.py  httpclient_builder.py
caikit_nlp_client/model/: TextGenerationTask.py  TextGenerationTaskResult.py  text_generation.py
hack/: patch-imports.awk  patch-imports.sh
models/flan-t5-small-caikit/: config.yml
protobuf/: caikit.runtime.Nlp.datastreamsourcegenerationtrainrecord.proto  caikit.runtime.Nlp.serverstreamingtextgenerationtaskrequest.proto  caikit.runtime.Nlp.textgenerationtaskrequest.proto  caikit_data_model.nlp.classifiedgeneratedtextresult.proto  caikit_data_model.nlp.classifiedgeneratedtextstreamresult.proto  caikit_data_model.nlp.tokenclassificationstreamresult.proto  caikit_data_model.nlp.tokenizationstreamresult.proto  nlpservice.proto  nlptrainingservice.proto  openapi.json
src/caikit_nlp_client/: constant.py  grpc_channel.py  grpc_client_introspection.py  http_client.py  http_config.py
tests/: __init__.py  conftest.py  grpc_predict.py  http_predict.py  predict.py  test_grpc_client.py  test_grpc_client_introspection.py  test_http_predict.py
(+3 files in other folders)
